<resources>
    <string name="app_name">GIRIDAB</string>
    <string name="copyright">© 2017 – MAS SE 2015 – 2017</string>

    <string name="date_format">dd-MM-yyyy</string>
    <string name="time_format">HH:mm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="connections">Connections</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>

    <string name="tab_about_application">Application</string>
    <string name="tab_about_developers">Developers</string>
    <string name="about_text">
        This app was programmed during the course \"SE for mobile applications\".\n
        There is no guarantee for the correctness of the data. Please only use this app at your own risk.
    </string>

    <string name="button_search">Search</string>
    <string name="departure_search">Departure</string>
    <string name="arrival_search">Arrival</string>
    <string name="search_hint_from">From</string>
    <string name="search_hint_to">To</string>
    <string name="search_in_progress">Loading connections…</string>
    <string name="tooltip_switch_stations">Switch stations</string>
    <string name="search_earlier_connections">Search earlier connections</string>
    <string name="search_later_connections">Search later connections</string>
    <string name="get_nearest_station">Search nearest station</string>
    <string name="take_me_home">Take me home</string>

    <string name="platform">Pl.</string>
    <string name="direction">Direction</string>
    <string name="transportation">Transportation</string>
    <string name="first_class">1. Cl</string>
    <string name="second_class">2. Cl</string>

    <string name="home_address">Take-Me-Home Address</string>
    <string name="hint_home_address">Home address</string>
</resources>
