<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hsr.se.mas.fahrplanapp.ConnectionSearchFragment">

    <AutoCompleteTextView
        android:id="@+id/text_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/search_hint_from"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:text="Buchs SG"
        android:labelFor="@id/text_from"/>

    <AutoCompleteTextView
        android:id="@+id/text_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_from"
        android:hint="@string/search_hint_to"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:text="Zürich HB"
        android:labelFor="@id/text_to"/>

    <LinearLayout
        android:id="@+id/connection_search_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_to">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/departure_search"
            android:id="@+id/button_time_reference"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="12:00"
            android:id="@+id/button_time_picker"
            tools:ignore="HardcodedText" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="01.01.2017"
            android:id="@+id/button_date_picker"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:id="@+id/button_search"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/connection_search_options"/>

</RelativeLayout>
